sucessful registration takes you to sign in page

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat May 16 01:58:00 PDT 2020
-sdk.dir=/Users/adems/Library/Android/sdk
+sdk.dir=C\:\\Users\\Brittany\\AppData\\Local\\Android\\Sdk
