--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,15 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/u_park_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/u_park_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".model.RegisterActivity"></activity>
+        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".model.RegisterActivity" />
         <activity android:name=".model.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,25 +41,27 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.tacoma.uw.guilbb.courseswebservicesapp.ParkingListActivity" />
         </activity>
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
 
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
     </application>
-
 
 </manifest>
