--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 23 16:22:41 PDT 2020
-sdk.dir=C\:\\Users\\NadirM\\AppData\\Local\\Android\\Sdk
+#Tue Jun 02 04:02:27 PDT 2020
+sdk.dir=C\:\\Users\\Brittany\\AppData\\Local\\Android\\Sdk
