Add dividers to item_list_content

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat May 23 16:22:41 PDT 2020
-sdk.dir=C\:\\Users\\NadirM\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\i3dar\\AppData\\Local\\Android\\Sdk
