--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-
-#Sat May 23 16:22:41 PDT 2020
-sdk.dir=C\:\\Users\\i3dar\\AppData\\Local\\Android\\Sdk
+#Fri Jun 05 20:38:48 PDT 2020
+sdk.dir=/Users/adems/Library/Android/sdk
