--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Jun 05 20:38:48 PDT 2020
-sdk.dir=/Users/adems/Library/Android/sdk
+sdk.dir=C\:\\Users\\i3dar\\AppData\\Local\\Android\\Sdk
